delivery page icons conflict on safari chrome fix

--- a/app/design/frontend/Homescapes/Develop/web/css/source/_extend.less
+++ b/app/design/frontend/Homescapes/Develop/web/css/source/_extend.less
@@ -9870,7 +9870,7 @@ select{
 	background-repeat: no-repeat;
 	background-size: 200px 887px;
 	padding-left: 4rem;
-	min-height: 2.5rem
+	min-height: 2.5rem;
 		
 		@-moz-document url-prefix() {
 			background-position:-165px -797px;
